# Rust_Macroquad_game

./: Cargo.toml  README.md  index.html  mitt_spel.wasm
.github/workflows/: deploy.yml
src/: main.rs
