[package]
name = "mitt_spel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { git = "https://github.com/not-fl3/macroquad.git", features = ["audio"] }
macroquad-particles = { git = "https://github.com/not-fl3/macroquad.git" }
